webjobs and crypto endpoint
